--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1",
-    "rowifi": "^1.0.0"
+    "noblox.js": "^4.1.0"
   },
   "engines": {
     "node": ">=16.9.0"
